--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,11 @@ after_success:
   - cp -r build dist/build
   - cp package.json ecosystem.config.js dist
 before_install:
-  # 降低id_rsa文件的权限，否则ssh处于安全方面的原因会拒绝读取秘钥
+  - openssl aes-256-cbc -K $encrypted_4dabef4e5ded_key -iv $encrypted_4dabef4e5ded_iv -in id_rsa.enc -out ~/.ssh/id_rsa -d
+    #降低id_rsa文件的权限，否则ssh处于安全方面的原因会拒绝读取秘钥
+    - chmod 600 ~/.ssh/id_rsa
+    #将生产服务器地址加入到构建机的信任列表中，否则连接时会询问是否信任服务器
+    - echo -e "Host $PROD_SERVER_IP\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 after_deploy:
   - pm2 deploy pm2.config.js prod setup --force
 #把 dist 文件推送到 github DEPLOY-PROD 分支下
